[package]
name = "bevy-undo"
version = "0.1.3"
edition = "2021"
authors = ["elm-register <elmprograminfo@gmail.com>"]
keywords = [
    "game",
    "gamedev",
    "bevy",
    "undo"
]
categories = [
    "game-engines",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elm-register/bevy-undo"
description = "This crate makes it easy to use the undo-operation on bevy"

